# iplan

./: .gitignore  CMakeLists.txt  Goal.h  LICENSE  README.md
src/: Goal.cpp  Goal.h  GoalFactory.cpp  GoalFactory.h  GoalManager.cpp  GoalManager.h  main.cpp
test/: test_goals.cpp
